Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35252

Graceful Failover rebalance time increased by ~180% in build 6.5.0-3790

    XMLWordPrintable

Details

    • Untriaged
    • Yes

    Description

      Observed degradation in rebalance time for graceful failover scenario 

      Test : Graceful failover (ms), 4 -> 3, 1 bucket x 100M x 2KB, 10K ops/sec

      Test Build 6.5.0-3789 Build 6.5.0-3790
      Rebalance Time(ms) 3457 6166

      http://showfast.sc.couchbase.com/#/timeline/Linux/reb/failover/all

       

      Looks like degradation introduced due to below change in kv_engine . Please take a look .

      http://latestbuilds.service.couchbase.com/builds/latestbuilds/couchbase-server/mad-hatter/3790/CHANGELOG 

      changed projects : 
       
      	kv_engine changed from 70a4d0af1d1c55d1494a1b777ed7935c34c36dc6 to master
      		[+] bc29fba MB-35096: Check received seqnoAck <= highest sent item
      		[+] 9bfe8e2 MB-35053: Extend allowedDuplicatePrepareSeqnos to highSeqno
      

       

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-35252
          # Subject Branch Project Status CR V

          Activity

            People

              sharath.sulochana Sharath Sulochana (Inactive)
              sharath.sulochana Sharath Sulochana (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty